[package]
name = "model"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

resolver = "2"

[dependencies]
bytemuck = "1.7.2"
cgmath = "0.18.0"
env_logger = "0.9.0"
log = "0.4.14"
pollster = "0.2.4"
wgpu = "0.11.0"
winit = "0.25.0"
